sass/theme/minimal.scss
@import "compass";
@import url(http://fonts.googleapis.com/css?family=Krona+One);

$minimal-color-alpha:#f7f775;
$minimal-color-beta:#8bf775;
$minimal-color-gamma:#75b6f7;
$minimal-color-delta:#cc75f7;
$minimal-color-epsilon:#f77575;

/* theme */
body[data-theme='minimal'] {
  font: 1.4em/1.6em "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
  color:#333;
  background: #fff;
  background-size:50% 100%;

  h1 {
    font: 3.4em/1.9em 'Krona One', sans-serif;
    letter-spacing:.15em;
    border-bottom:.25em solid rgba(0, 0, 0, .4);
  }

  h2 {
    font: 1.65em/1.3em 'Krona One', sans-serif;
    letter-spacing:-.05em;
    margin:.25em 0;
  }

  h3 {
    font-size: 1.25em;
    letter-spacing:.05em;
    color:#666;
    margin:.75em 0 .15em 0;
  }

  a,
  a:visited,
  a:active {
    text-decoration:none;
    color:#00a;
  }

  a:hover {
    color:#999;
  }

  p, ul {
    margin:.25em 0 .45em 0;
  }

  button {
    background:#ccc;
    color:#333;
    border-radius:0;
    border:none;
    border-bottom: .25em solid rgba(0, 0, 0, .2);
    font: bold 1.4em/1.4em "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
    padding:1em;
    @include box-shadow (inset 0 0 0 .15em rgba(0, 0, 0, .1));
    @include transition (
      box-shadow .3s ease-in-out,
      border-bottom .3s ease-in-out
    );
  }

  button:hover {
    border-bottom: .25em solid rgba(0, 0, 0, .4);
    @include box-shadow (inset 0 0 0 .15em rgba(0, 0, 0, .3));
  }

  button[data-width="50"] {
    width:50%;
  }

  button[data-width="33"] {
    width:33.3%;
  }

  button[data-high='1'] {
    background: $minimal-color-alpha;
  }

  button[data-high='2'] {
    background: $minimal-color-beta;
  }

  button[data-high='3'] {
    background: $minimal-color-gamma;
  }

  button[data-high='4'] {
    background: $minimal-color-delta;
  }

  button[data-high='5'] {
    background: $minimal-color-epsilon;
  }

  article[data-text] {
    margin-top:4em;
  }

  article[data-text]:after {
    content:attr(data-text);
    top:-1em;
    left:.5em;
    font:bold 3.2em/1em "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
    color:rgba(0, 0, 0, .2);
  }

  article {
    &[data-high="1"] {
      background: $minimal-color-alpha;
    }
    &[data-high="2"] {
      background: $minimal-color-beta;
    }
    &[data-high="3"] {
      background: $minimal-color-gamma;
    }
    &[data-high="4"] {
      background: $minimal-color-delta;
    }
    &[data-high="5"] {
      background: $minimal-color-epsilon;
    }
  }

  section {
    padding: 0 1em;
  }

  section[data-valign='center'] {
    text-align:center;
  }

  pre {
    margin:0;
    background:rgba(255, 255, 255, .4);
    padding:1.4em 1em 0 1em;
    padding-bottom:0;
    white-space: pre-wrap;
    @include box-shadow (
      0 0 0 .25em rgba(60, 60, 60, .5)
    );
  }

  pre[data-text] {
    position:relative;
    margin-top:2em;
  }

  pre[data-text]:after {
    content:attr(data-text);
    top:-1.25em;
    font: bold 1.25em/1em "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
    letter-spacing:.05em;
    color:#666;
  }

  ul {
    list-style-type: square;
  }
}

/* big screens */
@media screen and (max-width: 79em) {
  body[data-theme='minimal'] {
    section,
    footer {
      padding: 0 0;
    }
  }
}

/* small screens */
@media screen and (max-width: 44em) {
  body[data-theme='minimal'] {

    font-size: 1.6em;

    h1,
    article[data-text]:after {
      font-size:2.3em;
    }

    section > div {
      padding: .5em;
    }
  }
}

@media screen and (max-width: 66em) {
  body[data-theme='minimal'] {

    font-size: 1.6em;

    h1 {
      font-size:2.3em;
    }
  }
}

